--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "classnames": "^2.3.2",
-    "mqtt": "^4.3.7",
-    "mqtt-react-hooks": "jvoj/mqtt-react-hooks#b75cc33d5addb92686c26f99dc4c6666dc7eb15f",
     "precompiled-mqtt": "^4.3.14-beta",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
     "sass": "^1.58.1",
     "typescript": "^4.9.5"
   },
