--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "pycz2"
 version = "1.0.0"
@@ -16,17 +20,22 @@ dependencies = [
     "pyserial-asyncio>=0.6",
     "paho-mqtt>=2.1.0",
     "crc>=7.1.0",
-    "asyncio-mqtt>=0.16.2",
+    "aiomqtt>=2.0.0",
     "tenacity>=9.1.2",
+    "aiosqlite>=0.20.0",
+    "sse-starlette>=2.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.4.1",
+    "pytest-asyncio>=0.23.8",
+    "pytest-timeout>=2.3.1",
     "ruff>=0.12.2",
     "mypy>=1.16.1",
     "pylint>=3.3.7",
     "pyright>=1.1.402",
+    "httpx>=0.27.2",
 ]
 
 [project.scripts]
@@ -67,5 +76,13 @@ dev = [
     "pylint>=3.3.7",
     "pyright>=1.1.402",
     "pytest>=8.4.1",
+    "pytest-asyncio>=0.23.8",
+    "httpx>=0.27.2",
+    "pytest-timeout>=2.3.1",
 ]
+
+[tool.pytest.ini_options]
+addopts = "-q"
+timeout = 30
+asyncio_mode = "auto"
 
