docs: capture command API and env guidance

--- a/.env.example
+++ b/.env.example
@@ -1,55 +1,120 @@
-# pycz2 Configuration
-# Copy this file to .env and fill in your values.
+# ==============================================================================
+# pycz2 Environment Configuration Template
+# ==============================================================================
+# Copy this file to .env and adjust values for your installation:
+#   cp .env.example .env
+#
+# All settings below have sensible defaults for local development.
+# Update CZ_CONNECT and MQTT_* settings to match your production environment.
+# ==============================================================================
 
-# ----------------------------
-# -- CONNECTION SETTINGS
-# ----------------------------
-# Connection string for your Carrier system.
-# Use "hostname:port" for TCP/IP adapters (e.g., "192.168.1.100:8899").
-# Use a device path for local serial adapters (e.g., "/dev/ttyUSB0").
-CZ_CONNECT="10.0.1.20:8899"
+# ------------------------------------------------------------------------------
+# HVAC Connection Settings
+# ------------------------------------------------------------------------------
+# Connection string: "host:port" for TCP/IP serial bridge or "/dev/ttyUSB0"
+# for direct serial connection (9600,8,N,1).
+# Example TCP: "10.0.1.20:8899" (USR-W610 serial-to-network adapter)
+# Example Serial: "/dev/ttyUSB0" or "/dev/ttyAMA0"
+CZ_CONNECT="localhost:8899"
 
-# The number of zones your system has (1-8).
+# Number of zones in your HVAC system (1-8)
 CZ_ZONES=4
 
-# [Optional] A comma-separated list of names for your zones.
-# If provided, the number of names must match CZ_ZONES.
-# Example: CZ_ZONE_NAMES="Living Room,Bedrooms,Basement"
-CZ_ZONE_NAMES="Main Room,Upstairs Bedroom,Downstairs,Unused"
+# Optional: Comma-separated zone names (must match CZ_ZONES count)
+# If unset, zones will be numbered (Zone 1, Zone 2, etc.)
+CZ_ZONE_NAMES="Main Room,Upstairs,Downstairs,Office"
 
-# [Optional] The device ID to use on the serial bus. Must be unique.
-# Defaults to 99 if not set.
+# Device ID for pycz2 on the RS-485 bus (1-255, must be unique)
+# Default 99 is safe for most installations; HVAC controller uses ID 1.
 CZ_ID=99
 
-# ----------------------------
-# -- API SERVER SETTINGS
-# ----------------------------
-# The host and port for the FastAPI web server.
-# Use "0.0.0.0" to make it accessible on your network.
+# ------------------------------------------------------------------------------
+# API Server Settings
+# ------------------------------------------------------------------------------
+# Host and port for FastAPI server
+# Use "0.0.0.0" to listen on all interfaces (required for remote access)
 API_HOST="0.0.0.0"
 API_PORT=8000
 
-# ----------------------------
-# -- MQTT PUBLISHER SETTINGS
-# ----------------------------
-# [Optional] Enable the MQTT publisher. Set to "true" to enable.
+# ------------------------------------------------------------------------------
+# MQTT Integration (Optional)
+# ------------------------------------------------------------------------------
+# Enable MQTT publishing of HVAC status updates
 MQTT_ENABLED=false
 
-# Your MQTT broker's hostname or IP address.
+# MQTT broker hostname/IP (update for production)
 MQTT_HOST="localhost"
 
-# Your MQTT broker's port.
+# MQTT broker port (default: 1883 for unencrypted, 8883 for TLS)
 MQTT_PORT=1883
 
-# [Optional] Username for MQTT authentication.
+# MQTT authentication (leave empty if broker doesn't require auth)
 MQTT_USER=""
-
-# [Optional] Password for MQTT authentication.
 MQTT_PASSWORD=""
 
-# The base topic prefix for publishing status data.
-# The final topic will be e.g., "hvac/cz2/status".
+# Base topic prefix for status messages (e.g., "hvac/cz2/status")
 MQTT_TOPIC_PREFIX="hvac/cz2"
 
-# How often (in seconds) to automatically publish status to MQTT.
+# Interval (seconds) between MQTT status publications (minimum: 5)
 MQTT_PUBLISH_INTERVAL=60
+
+# ------------------------------------------------------------------------------
+# Cache Settings
+# ------------------------------------------------------------------------------
+# Enable in-memory cache for instant /status responses when HVAC is offline
+ENABLE_CACHE=true
+
+# Mark cached data as stale after N seconds (minimum: 10)
+# Stale data is still returned but flagged in /status response metadata.
+CACHE_STALE_SECONDS=300
+
+# SQLite database path for persistent cache (optional)
+# If unset, defaults to ~/.pycz2_cache.db
+# CACHE_DB_PATH="/var/lib/pycz2/cache.db"
+
+# ------------------------------------------------------------------------------
+# Background Service Settings (CLI-style refresh)
+# ------------------------------------------------------------------------------
+# Interval (seconds) for background HVAC polling when using CLI-style service
+# (WORKER_ENABLED=false). Minimum: 30 seconds.
+CACHE_REFRESH_INTERVAL=300
+
+# Maximum age (seconds) before forcing a cache refresh even if recent.
+# Used to prevent serving excessively old data. Minimum: 60 seconds.
+CACHE_MAX_AGE=600
+
+# ------------------------------------------------------------------------------
+# Worker Settings (Deprecated - being phased out)
+# ------------------------------------------------------------------------------
+# Enable legacy worker mode (prefer CLI-style service with WORKER_ENABLED=false)
+WORKER_ENABLED=false
+
+# Worker polling interval (seconds) when WORKER_ENABLED=true (minimum: 5)
+WORKER_POLL_INTERVAL=30
+
+# Initial delay (seconds) before reconnecting after HVAC connection loss
+WORKER_RECONNECT_DELAY=5
+
+# Maximum reconnect delay (seconds) with exponential backoff (minimum: 60)
+WORKER_MAX_RECONNECT_DELAY=300
+
+# ------------------------------------------------------------------------------
+# Server-Sent Events (SSE) Settings
+# ------------------------------------------------------------------------------
+# Enable real-time push updates via /events endpoint (recommended)
+ENABLE_SSE=true
+
+# SSE heartbeat interval (seconds) to keep connections alive (minimum: 10)
+SSE_HEARTBEAT_INTERVAL=30
+
+# Maximum concurrent SSE subscribers per IP address (minimum: 1)
+SSE_MAX_SUBSCRIBERS_PER_IP=5
+
+# ------------------------------------------------------------------------------
+# Command Queue Settings
+# ------------------------------------------------------------------------------
+# Maximum number of pending HVAC commands in queue (minimum: 10)
+COMMAND_QUEUE_MAX_SIZE=100
+
+# Timeout (seconds) for individual command execution (minimum: 5)
+COMMAND_TIMEOUT_SECONDS=30
