refactor: remove hardcoded API and MQTT URLs; derive from window.location for better flexibility

--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,12 @@
 # Mountain House Thermostat - Local Development Configuration
 
-# Backend API Base URL (local cz2 API server)
-VITE_API_BASE_URL=http://localhost:8000
+# Backend API Base URL - REMOVED: now auto-derives from window.location.hostname
+# Works for both SSH port-forward (localhost) and Tailscale direct access
+# VITE_API_BASE_URL=http://localhost:8000
 
-# MQTT WebSocket URL (local broker WebSocket port)
-VITE_MQTT_WS_URL=ws://localhost:9001
+# MQTT WebSocket URL - REMOVED: now auto-derives from window.location.hostname  
+# Works for both SSH port-forward (localhost) and Tailscale direct access
+# VITE_MQTT_WS_URL=ws://localhost:9001
 
 # API Request Timeout (milliseconds)
 VITE_API_TIMEOUT_MS=35000
