feat: add healthcheck integration for external monitoring services

--- a/.env.example
+++ b/.env.example
@@ -118,3 +118,21 @@ COMMAND_QUEUE_MAX_SIZE=100
 
 # Timeout (seconds) for individual command execution (minimum: 5)
 COMMAND_TIMEOUT_SECONDS=30
+
+# ------------------------------------------------------------------------------
+# Healthcheck Integration (Optional)
+# ------------------------------------------------------------------------------
+# UUID from healthchecks.io (or compatible service) for monitoring background
+# refresh health. Leave empty to disable healthcheck pings.
+#
+# Example: Get a UUID from https://healthchecks.io after creating a check.
+# The healthcheck will POST JSON with hostname, timestamp, and zone count
+# every time the HVAC poll succeeds (default: every 5 minutes).
+HEALTHCHECK_UUID=""
+
+# Base URL for healthcheck service (default works for healthchecks.tpeet.net)
+# For self-hosted instances, update to your server URL.
+# HEALTHCHECK_BASE_URL="https://healthchecks.tpeet.net/ping"
+
+# Timeout (seconds) for healthcheck HTTP requests (minimum: 1)
+# HEALTHCHECK_TIMEOUT=5
