--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "tenacity>=9.1.2",
     "aiosqlite>=0.20.0",
     "sse-starlette>=2.0.0",
+    "httpx>=0.27.2",
 ]
 
 [project.scripts]
