--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   # ----------------------------------------------------------------------------
   cz2:
     build:
-      context: ./cz2
+      context: ./backend
       dockerfile: Dockerfile
     image: mountainstat-backend:latest
     container_name: mountainstat-cz2
@@ -37,7 +37,7 @@ services:
     volumes:
       - cz2-cache:/home/appuser/.cache/pycz2
       # For development: mount local code (uncomment below)
-      # - ./cz2/src:/app/src:ro
+      # - ./backend/src:/app/src:ro
 
     labels:
         - com.centurylinklabs.watchtower.enable=false
@@ -67,7 +67,7 @@ services:
   # ----------------------------------------------------------------------------
   frontend:
     build:
-      context: ./mountainstat-main
+      context: ./frontend
       dockerfile: Dockerfile
       args:
         # Build-time env vars (no defaults - fail if not in .env)
